Project

General

Profile

Actions

Bug #21082

closed

client: the client_lock is not taken for Client::getcwd

Added by Patrick Donnelly over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
luminous
Regression:
No
Severity:
1 - critical
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

https://github.com/ceph/ceph/blob/db16d50cc56f5221d7bcdb28a29d5e0a456cba94/src/client/Client.cc#L9387-L9425

We also have to deal with Client::chdir (which holds the client_lock) calling getcwd.


Related issues 1 (0 open1 closed)

Copied to CephFS - Backport #21098: luminous: client: the client_lock is not taken for Client::getcwdResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 6 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Patrick Donnelly over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Patrick Donnelly over 6 years ago

  • Copied to Backport #21098: luminous: client: the client_lock is not taken for Client::getcwd added
Actions #4

Updated by Patrick Donnelly over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF